# Effect-of-electromagnetic-radiation-on-the-brain

./: .gitignore  .~lock.data_air.xlsx#  AlgoElectro.cpp  AlgoElectro.h  AlgoElectro_NEW.cpp  AlgoElectro_NEW.hpp  Array_3D.cpp  Array_3D.h  Array_3D_Template.h  Array_3D_Template.tpp  CMakeLists.txt  CSV_parser.cpp  CSV_parser.hpp  Conventions.md  Doxyfile.in  ElectromagneticSource.cpp  ElectromagneticSource.h  GeometricalForms_isInside.cpp  GeometricalForms_isInside.hpp  GridCreator.cpp  GridCreator.h  GridCreator_NEW.cpp  GridCreator_NEW.h  InputParser.cpp  InputParser.h  InterfaceToParaviewer.cpp  InterfaceToParaviewer.h  MPI_Initializer.cpp  MPI_Initializer.h  MaterialProperties.csv  Materials.cpp  Materials.h  MemoryUsage.cpp  MemoryUsage.h  MemoryUsage.hpp  Node.h  Node1DField.h  Node3DField.h  ProfilingClass.cpp  ProfilingClass.h  (+21 more)
BrainScans/: CMakeLists.txt  README.md  Read_Upsample_Display_Brain.cpp  Save_bin_brain_to_vti.cpp  ThreeDim_linear_interp.hpp  correctionIn3Directions.m  save_VTI_to_bin.py
BrainScans/DATA/: README.md  materials_100by100by100.tar  materials_100by119by100.vti  materials_150by150by150.tar  zipper_unzipper.cpp
BrainScans/vtl_new_boman/: CMakeLists.txt  vtlSPoints.h  vtlVec3.h  vtl_polydata.h  vtl_spoints.cpp  vtl_spoints.h
CMake_tests/: CMakeLists.txt  filesCompare.cpp
CMake_tests/TESTS/: 1_emitting_face_with_ABC.input  multi_layered_brain.input  one_centered_dipole_probing_lines_with_ABC.input  testSourceCenteredInCube.input  two_dipoles_in_air.input
CMake_tests/TESTS/TESTS_1D_ABC/: FACE_EX_Electric_along_Y.input  FACE_EX_Electric_along_Z.input  FACE_EY_Electric_along_X.input  FACE_EY_Electric_along_Z.input  FACE_EZ_Electric_along_X.input  FACE_EZ_Electric_along_Y.input  FACE_Minus_EX_Electric_along_Y.input  FACE_Minus_EX_Electric_along_Z.input  FACE_Minus_EY_Electric_along_X.input  FACE_Minus_EY_Electric_along_Z.input  FACE_Minus_EZ_Electric_along_X.input  FACE_Minus_EZ_Electric_along_Y.input
CMake_tests/TESTS/TEST_1D_PML/: FACE_EX_Electric_along_Y_PML.input  FACE_EX_Electric_along_Y_PML_ORDER_0.input  FACE_EX_Electric_along_Y_PML_ORDER_2.input  FACE_EX_Electric_along_Z_PML_ORDER_0.input  FACE_EX_Electric_along_Z_PML_ORDER_2.input  FACE_EY_Electric_along_X_PML_ORDER_0.input  FACE_EY_Electric_along_X_PML_ORDER_2.input  FACE_EY_Electric_along_Z_PML_ORDER_0.input  FACE_EY_Electric_along_Z_PML_ORDER_2.input  FACE_EZ_Electric_along_X_PML_ORDER_0.input  FACE_EZ_Electric_along_X_PML_ORDER_2.input  FACE_EZ_Electric_along_Y_PML_ORDER_0.input  FACE_EZ_Electric_along_Y_PML_ORDER_2.input  FACE_Minus_EX_Electric_along_Y_PML_ORDER_0.input  FACE_Minus_EX_Electric_along_Y_PML_ORDER_2.input  FACE_Minus_EX_Electric_along_Z_PML_ORDER_0.input  FACE_Minus_EX_Electric_along_Z_PML_ORDER_2.input  FACE_Minus_EY_Electric_along_X_PML_ORDER_0.input  FACE_Minus_EY_Electric_along_X_PML_ORDER_2.input  FACE_Minus_EY_Electric_along_Z_PML_ORDER_0.input  FACE_Minus_EY_Electric_along_Z_PML_ORDER_2.input  FACE_Minus_EZ_Electric_along_X_PML_ORDER_0.input  FACE_Minus_EZ_Electric_along_X_PML_ORDER_2.input  FACE_Minus_EZ_Electric_along_Y_PML_ORDER_0.input  FACE_Minus_EZ_Electric_along_Y_PML_ORDER_2.input
CMake_tests/VALIDATING_DATA/IS_1D_FACE_EX_Electric_along_Y/: OUTPUT_FILES_ELECTRO_r0_00000020.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_EX_Electric_along_Y_ABC/: OUTPUT_FILES_ELECTRO_r0_00003500.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_EX_Electric_along_Y_PML_ORDER_0/: OUTPUT_FILES_ELECTRO_r0_00002000.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_EX_Electric_along_Y_PML_ORDER_2/: OUTPUT_FILES_ELECTRO_r0_00002000.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_EX_Electric_along_Z_ABC/: OUTPUT_FILES_ELECTRO_r0_00003500.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_EX_Electric_along_Z_PML_ORDER_0/: OUTPUT_FILES_ELECTRO_r0_00002000.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_EX_Electric_along_Z_PML_ORDER_2/: OUTPUT_FILES_ELECTRO_r0_00002000.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_EY_Electric_along_X_ABC/: OUTPUT_FILES_ELECTRO_r0_00003500.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_EY_Electric_along_X_PML_ORDER_0/: OUTPUT_FILES_ELECTRO_r0_00002000.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_EY_Electric_along_X_PML_ORDER_2/: OUTPUT_FILES_ELECTRO_r0_00002000.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_EY_Electric_along_Z_ABC/: OUTPUT_FILES_ELECTRO_r0_00003500.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_EY_Electric_along_Z_PML_ORDER_0/: OUTPUT_FILES_ELECTRO_r0_00002000.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_EY_Electric_along_Z_PML_ORDER_2/: OUTPUT_FILES_ELECTRO_r0_00002000.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_EZ_Electric_along_X_ABC/: OUTPUT_FILES_ELECTRO_r0_00003500.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_EZ_Electric_along_X_PML_ORDER_0/: OUTPUT_FILES_ELECTRO_r0_00002000.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_EZ_Electric_along_X_PML_ORDER_2/: OUTPUT_FILES_ELECTRO_r0_00002000.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_EZ_Electric_along_Y_ABC/: OUTPUT_FILES_ELECTRO_r0_00003500.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_EZ_Electric_along_Y_PML_ORDER_0/: OUTPUT_FILES_ELECTRO_r0_00002000.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_EZ_Electric_along_Y_PML_ORDER_2/: OUTPUT_FILES_ELECTRO_r0_00002000.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_Minus_EX_Electric_along_Y_ABC/: OUTPUT_FILES_ELECTRO_r0_00003500.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_Minus_EX_Electric_along_Y_PML_ORDER_0/: OUTPUT_FILES_ELECTRO_r0_00002000.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_Minus_EX_Electric_along_Y_PML_ORDER_2/: OUTPUT_FILES_ELECTRO_r0_00002000.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_Minus_EX_Electric_along_Z_ABC/: OUTPUT_FILES_ELECTRO_r0_00003500.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_Minus_EX_Electric_along_Z_PML_ORDER_0/: OUTPUT_FILES_ELECTRO_r0_00002000.vti
CMake_tests/VALIDATING_DATA/IS_1D_FACE_Minus_EX_Electric_along_Z_PML_ORDER_2/: OUTPUT_FILES_ELECTRO_r0_00002000.vti
CREATE_GEOMETRY/: CMakeLists.txt  (+8 more)
JSON/: CMakeLists.txt  json.cpp  json.hpp
thermo/: CMakeLists.txt  new_thermique.cpp  readInputGeometryFile.h  test.geometry
(+95 files in other folders)
